kubernetes/ingress/plane-sso-kyverno-patch.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: plane-sso-env-patch
spec:
  admission: true
  background: false
  emitWarning: false
  validationFailureAction: Audit
  rules:
  - name: inject-plane-admin
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - plane-admin-wl-*
          namespaces:
          - plane
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: plane-admin
            env:
                - name: IS_GITEA_ENABLED
                  value: "1"
                - name: GITEA_HOST
                  value: https://gitea.ebruno.fr
                - name: GITEA_CLIENT_ID
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: id
                - name: GITEA_CLIENT_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: secret
  - name: inject-plane-api
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - plane-api-wl-*
          namespaces:
          - plane
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: plane-api
            env:
                - name: IS_GITEA_ENABLED
                  value: "1"
                - name: GITEA_HOST
                  value: https://gitea.ebruno.fr
                - name: GITEA_CLIENT_ID
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: id
                - name: GITEA_CLIENT_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: secret
  - name: inject-plane-beat-worker
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - plane-beat-worker-wl-*
          namespaces:
          - plane
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: plane-beat-worker
            env:
                - name: IS_GITEA_ENABLED
                  value: "1"
                - name: GITEA_HOST
                  value: https://gitea.ebruno.fr
                - name: GITEA_CLIENT_ID
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: id
                - name: GITEA_CLIENT_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: secret
  - name: inject-plane-live
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - plane-live-wl-*
          namespaces:
          - plane
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: plane-live
            env:
                - name: IS_GITEA_ENABLED
                  value: "1"
                - name: GITEA_HOST
                  value: https://gitea.ebruno.fr
                - name: GITEA_CLIENT_ID
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: id
                - name: GITEA_CLIENT_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: secret
  - name: inject-plane-space
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - plane-space-wl-*
          namespaces:
          - plane
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: plane-space
            env:
                - name: IS_GITEA_ENABLED
                  value: "1"
                - name: GITEA_HOST
                  value: https://gitea.ebruno.fr
                - name: GITEA_CLIENT_ID
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: id
                - name: GITEA_CLIENT_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: secret
  - name: inject-plane-web
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - plane-web-wl-*
          namespaces:
          - plane
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: plane-web
            env:
                - name: IS_GITEA_ENABLED
                  value: "1"
                - name: GITEA_HOST
                  value: https://gitea.ebruno.fr
                - name: GITEA_CLIENT_ID
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: id
                - name: GITEA_CLIENT_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: secret
  - name: inject-plane-worker
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Pod
          names:
          - plane-worker-wl-*
          namespaces:
          - plane
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - name: plane-worker
            env:
                - name: IS_GITEA_ENABLED
                  value: "1"
                - name: GITEA_HOST
                  value: https://gitea.ebruno.fr
                - name: GITEA_CLIENT_ID
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: id
                - name: GITEA_CLIENT_SECRET
                  valueFrom:
                    secretKeyRef:
                      name: plane-gitea-oauth
                      key: secret
